# gopip

./: .gitignore  .goreleaser.yaml  NOTICE  README.md  go.mod  main.go
.github/actions/setup-gopip/: action.yml
clients/gopip-client/: README.md  pyproject.toml
clients/gopip-client/src/gopip_client/: __init__.py  __main__.py  _binary.py
cmd/: cache.go  cli_test.go  common.go  explain.go  install.go  lock.go  resolve.go  root.go  version.go  version_test.go
docs/: architecture.md  benchmarks.md  getting-started.md  limitations.md  lockfile.md  resolver.md  roadmap.md  tutorial.md  validation.md
examples/basic/: README.md  requirements.txt
examples/benchmark/: README.md
examples/benchmark/projects/: cli-tool.txt  django-stack.txt  flask-app.txt
examples/benchmark/scripts/: aggregate.py  algorithm_bench.sh  config.sh  lib.sh  machine.sh  measure.py  resolve_bench.sh  run.sh  (+1 more)
internal/lockfile/: explain.go  lockfile.go  lockfile_test.go
internal/pypi/: cache.go  cache_test.go  memsource.go  memsource_test.go  network_test.go  pypi.go  pypi_test.go  snapshot.go  snapshot_test.go
internal/requirement/: marker.go  marker_test.go  reqfile.go  reqfile_test.go  requirement.go  requirement_test.go
internal/resolve/: capture_test.go  dod_test.go  explanation_test.go  extras.go  extras_test.go  failure_test.go  filter_test.go  fixture_test.go  hashes_test.go  network_test.go  partial.go  profile_test.go  reference_test.go  resolve.go  resolve_test.go  term.go  yanked_test.go
internal/version/: specifier.go  specifier_test.go  version.go  version_test.go
(+1 files in other folders)
