[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gopip-client"
version = "0.1.0"
description = "Installer and launcher for gopip, a fast, deterministic dependency resolver for Python."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [{ name = "Levi Chinecherem Chidi" }]
keywords = ["python", "dependency-resolver", "packaging", "lockfile", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/Go-Python-Toolchain/gopip"
Source = "https://github.com/Go-Python-Toolchain/gopip"
Issues = "https://github.com/Go-Python-Toolchain/gopip/issues"

[project.scripts]
gopip = "gopip_client.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gopip_client"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md"]
